CCD-5849 Reapply Deserialisation FAIL_ON_UNKNOWN_PROPERTIES to objectMapper. Junit 5 test classes remove unnecessary "public". Use ES config as per def-store changes.